adding links to portfolio

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/tictactoe.png" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://github.com/ThatNaturall/TicTacToeJs">
 												A game of Tic tac toe built with Js 
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -435,7 +435,7 @@
 									<div class="item">
 										<img src="assets/images/portfolio/calculator.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="https://github.com/ThatNaturall/Simple-Calculator">
 												A calculator built with python
 											</a>
 										</div><!-- /.isotope-overlay -->
