--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> Kamogelo <br> Ramantsima <span>.</span>   </h2>
 							<p>Application & Software Engineer</p>
-							<a href="assets/download/Kamogelo_Ramantsima_Resume(v).pdf" download>download resume</a>
+							<a href="assets/download/Kamogelo_Ramantsima_Resume(s).pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
